<resources>
    <string name="app_name">Tecsaa</string>
    <string name="title_activity_main_dash_board">MainDashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Student Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home_work">Home Work</string>
    <string name="menu_home">Home</string>
    <string name="menu_requirment">Requirement</string>
    <string name="menu_class_schedule">Class Schedule</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_class_work">Class Work</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_syllabus">Syllabus</string>
    <string name="menu_exam">Exam</string>
    <string name="menu_bus_status">Bus Status</string>
    <string name="menu_results">Results</string>
    <string name="menu_fees">Fees</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>
</resources>
